<resources>

    <string name="app_name">ZipperMine</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="enable_lock_error">Please enable Pattern/Pin/Dot lock</string>
    <string name="fingerprint_lock_on">Fingerprint lock turned on</string>
    <string name="fingerprint_lock_off">Fingerprint lock turned off</string>
    <string name="setSecurityQuestion">Security will help you if you ever forget your password. If you want to set security question then click Yes otherwise click No.</string>
    <string name="protect_your_privacy">Protect your privacy</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="fran_ais">français</string>
    <string name="arabic">عربي</string>
    <string name="espa_ola">española</string>
    <string name="deutsch">Deutsch</string>
    <string name="hindi">हिंदी</string>
    <string name="you_can_change_your_language_preferences_anytime_in_settings">You can change your language preferences anytime in settings.</string>
    <string name="continue_txt">Continue</string>
    <string name="general_settings">General Settings</string>
    <string name="enable_zip_lock">Enable Zip Lock</string>
    <string name="set_password">Set Password</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="change_security_question">Change Security Question</string>
    <string name="styles">Styles</string>
    <string name="themes">Themes</string>
    <string name="vibration">Vibration</string>
    <string name="support_us">Support Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="preview">Preview</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="rate_our_hard_work">Rate our hard work</string>
    <string name="protect_your_privacy_txt">Protect your privacy</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="more_apps_ad">More Apps (AD)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="fingerprint_acttxt">Fingerprint</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="enable_zip_lock_acttxt">Enable Zip Lock</string>
    <string name="enable_zip_lock_txt">Enable Zip Lock</string>
    <string name="security_question">Security Question</string>
    <string name="select_security_question">Select security question.</string>
    <string name="answer">Answer</string>
    <string name="enter_your_answer_here">Enter your answer here...</string>
    <string name="enter_answer_of_your_old_question">Enter Answer Of your Old Question...</string>
    <string name="please_enter_something">Please enter something.</string>
    <string name="done">Done</string>
    <string name="done_2">Done</string>
    <string name="enable_zip_lock_2">Enable Zip Lock</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="door_themes">Door Themes</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to Exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="ad_is_loading">Ad is loading...</string>
    <string name="enter_your_pin_2">Enter your pin</string>
    <string name="answer_your_security_question">Answer your security question.</string>
    <string name="question">Question</string>
    <string name="enter_your_answer_here_2">Enter your answer here...</string>
    <string name="wrong_answer_enter_correct_one">Wrong Answer! Enter Correct One</string>
    <string name="done_3">Done</string>
    <string name="cancel_2">Cancel</string>
    <string name="permission_required">Permission Required</string>
    <string name="read_phone_state_permission_to_use_fully_functional_screen_lock">Read Phone State Permission to use fully functional screen lock.</string>
    <string name="permit">Permit</string>
    <string name="kindly_permit_draw_over_other_apps_to_use_fully_functional_screen_lock">Kindly permit draw over other apps to use fully functional screen lock.</string>
    <string name="permit_2">Permit</string>
    <string name="please_rate_5_stars_to_support">Please rate 5 stars to support</string>
    <string name="cancel_3">Cancel</string>
    <string name="submit">Submit</string>
    <string name="do_you_want_to_set_security_question">Do you want to set security question?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="facebook_advertiser">Facebook advertiser</string>
    <string name="this_is_a_facebook_demo_ad">This is a facebook demo ad</string>
    <string name="tour_ad_integration_works">Tour ad integration works.</string>
    <string name="facebook_advertiser_2">Facebook advertiser</string>
    <string name="this_is_a_facebook_demo_ad_2">This is a facebook demo ad</string>
    <string name="tour_ad_integration_works_2">Tour ad integration works.</string>
    <string name="ad_2">Ad</string>
    <string name="ad">AD</string>
    <string name="install">Install</string>
    <string name="install_2">Install</string>
    <string name="ad_3">AD</string>
    <string name="ad_4">AD</string>
    <string name="install_3">Install</string>
    <string name="change_language">Change Language</string>

</resources>