<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:text="@string/do_you_want_to_set_security_question"/>

    <TextView
        android:id="@+id/body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:text="@string/setSecurityQuestion"/>


    <Button
        android:id="@+id/noBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/yesBtn"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/round_corners_8sdp"
        android:backgroundTint="@color/gray"
        android:text="@string/no"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/noBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:background="@drawable/round_corners_8sdp"
        android:backgroundTint="@color/green"
        android:text="@string/yes"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>