<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.activities.LanguageAct">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/select_language"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="@dimen/_10sdp"/>


    <FrameLayout
        android:id="@+id/nativeAdFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/fab_padding"
        android:layout_marginTop="@dimen/fab_padding"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintBottom_toTopOf="@id/description"
        android:layout_marginBottom="@dimen/_30sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/eng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/french"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/highlight_selector">
            <ImageView
                android:id="@+id/eng_iv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/usa"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eng_iv"
                android:gravity="center"
                android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/eng"
            app:layout_constraintEnd_toStartOf="@id/arabic"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/highlight_selector">

            <ImageView
                android:id="@+id/french_iv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/france"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:text="@string/fran_ais"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/french_iv"
                android:gravity="center"
                android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/arabic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/french"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/highlight_selector">
            <ImageView
                android:id="@+id/arabic_iv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/saudi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/arabic_iv"
                android:gravity="center"
                android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/eng"
            app:layout_constraintEnd_toStartOf="@id/german"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:background="@drawable/highlight_selector">
            <ImageView
                android:id="@+id/spanish_iv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/spain"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espa_ola"
                android:singleLine="true"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spanish_iv"
                android:gravity="center"
                android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/german"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/french"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toEndOf="@id/spanish"
            app:layout_constraintEnd_toStartOf="@id/arabic"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/highlight_selector">
            <ImageView
                android:id="@+id/german_iv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/germany"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:text="@string/deutsch"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/german_iv"
                android:gravity="center"
                android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hindi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/german"
            app:layout_constraintTop_toBottomOf="@id/arabic"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/highlight_selector">
            <ImageView
                android:id="@+id/hindi_iv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/india"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


            <TextView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="wrap_content"
                android:text="@string/hindi"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hindi_iv"
                android:gravity="center"
                android:textSize="15sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/you_can_change_your_language_preferences_anytime_in_settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"/>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/round_corners_8sdp"
        android:backgroundTint="@color/popups_colors"
        android:letterSpacing="0.1"
        android:textSize="@dimen/_13ssp"
        android:text="@string/continue_txt"
        android:textColor="@color/white"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"/>



</androidx.constraintlayout.widget.ConstraintLayout>